--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
+    "nanoid": "^5.1.5",
     "socket.io": "^4.8.1",
     "socketio": "^1.0.0"
   }
