--- a/MyDiscord/package.json
+++ b/MyDiscord/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@types/simple-peer": "^9.11.8",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -24,8 +25,11 @@
   },
   "dependencies": {
     "antd": "^5.24.5",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "simple-peer": "^9.11.1",
+    "styled-components": "^6.1.17"
   }
 }
