--- a/MyDiscord/package.json
+++ b/MyDiscord/package.json
@@ -11,9 +11,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/axios": "^0.9.36",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "@types/simple-peer": "^9.11.8",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -25,11 +28,14 @@
   },
   "dependencies": {
     "antd": "^5.24.5",
+    "axios": "^1.8.4",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.5.0",
     "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17"
   }
 }
